tests/types/errors/user_type_field_mismatch.mochi
type Person {
  name: string
  age: int
}

let bob: Person = Person { name: 123, age: "old" }
